# datagigbackend

./: .env.example  .gitignore  .gitignore 2  CLAUDE.md  README.md  pyproject.toml
app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py
app/db/: pool.py
app/models/: applications.py  auth.py  email.py  gigs.py  profile.py  submissions.py  verification.py
app/routers/: applications.py  auth.py  email.py  gigs.py  health.py  profile.py  submissions.py  verify.py
app/services/: applications_service.py  auth_service.py  email_service.py  gigs_service.py  profile_service.py  submissions_service.py  verification_service.py
datagigbackend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_applications.py  test_auth.py  test_email.py  test_gigs.py  test_health.py  test_profile.py  test_submissions.py  test_verify.py
