[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagigbackend"
version = "0.1.0"
description = "DataGigs Python/FastAPI backend service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.30",
    "supabase>=2.0",
    "PyJWT[cryptography]>=2.8",
    "httpx>=0.27",
    "structlog>=24.0",
    "resend>=2.0",
    "pandas>=2.0",
    "numpy>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "pytest-asyncio", "ruff", "anyio[trio]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.13"
exclude = ["tests/"]
